# cpp_course

./: .gitignore  CMakeLists.txt  LICENSE  README.md  age  bs  bubble_sort  example_struct  header.tex  index.theme  insert_sort  lp  min_xml_qt.md  multidimensional_arrays  name  oda  recursion_demo  recursion_lab  select_sort  test  test.txt
III_course/: CMakeLists.txt  README.md  README_v1.md
III_course/2025-09-04-sqrt/: CMakeLists.txt  README.md  age.cpp  lecture3.cpp  main.cpp  name.cpp  root.cpp  root.h
III_course/2025-09-11-topic-3/: CMakeLists.txt  README.md  linkedlist_insert.cpp  sorting_array.cpp  vector_map_search.cpp
III_course/2025-09-17-arrays/: CMakeLists.txt  README.md  multidimensional_arrays.cpp  output_arrays.cpp
III_course/2025-09-17-linear-programming/: CMakeLists.txt  README.md  lp.cpp
III_course/2025-09-17-linear-programming/graphviz/: algo_task1.dot  algo_task2.dot
III_course/2025-09-20-branched-structure/: CMakeLists.txt  README.md  bs.cpp
III_course/2025-09-20-branched-structure/graphviz/: bs_task1.dot  bs_task2.dot  bs_task3.dot
III_course/2025-09-21-one-dimensional-arrays/: CMakeLists.txt  README.md  oda.cpp
III_course/2025-09-21-one-dimensional-arrays/graphviz/: oda_task1.dot  oda_task2.dot  test_task2.dot
III_course/2025-09-24-qt-notepad/: CMakeLists.txt  README.md  main.cpp  notepad.cpp  notepad.h  qt_notepad.desktop.in
III_course/2025-10-02-assertion-statement/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-02-pointers-and-links/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-04-files/: CMakeLists.txt  README.md  car.csv  main.cpp
III_course/2025-10-04-files/graphviz/: print_rows.dot  (+2 more)
III_course/2025-10-04-loops/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-04-string-variables-and-functions/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-06-classes-and-objects/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-06-classes-and-objects-7/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-13-topic-8/: CMakeLists.txt  README.md  main.cpp
III_course/2025-10-19-square-perimeter/: CMakeLists.txt  README.md  c++_logo.html  main.cpp
III_course/2025-10-29-simpson-integration/: CMakeLists.txt  README.md  main.cpp  math_functions.h  menus.h  messages.h  validate.h
III_course/2025-11-01-qt-tabulation/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
III_course/2025-11-03-qt-gui-basics/: CMakeLists.txt  README.md
III_course/2025-11-04-overloading-of-arguments/: CMakeLists.txt  README.md  main.cpp
III_course/2025-11-10-qt-practical-10-tree-parser/: CMakeLists.txt  RAEDME.md  calculation.cpp  calculation.h  expressiontree.h  main.cpp  parser.h
III_course/2025-11-12-qt-drawing/: CMakeLists.txt  RAEDME.md  README.md  drawing.cpp  drawing.h  drawing.ui  main.cpp
III_course/2025-11-15-qt-practical-11-tree-parser-2/: CMakeLists.txt  README.md  calculation.cpp  calculation.h  calculation.ui  expressiontree.h  main.cpp  parser.h
III_course/2025-11-18-topic-14/: Accountant.cpp  Accountant.h  CMakeLists.txt  Calc.h  Employee.cpp  Employee.h  Employer.cpp  Employer.h  Person.cpp  Person.h  Position.cpp  Position.h  README.md  main.cpp
III_course/2025-11-19-qt-practical-13-postgresql/: CMakeLists.txt  README.md
III_course/2025-11-30-inheritance-templates/: CMakeLists.txt  README.md  main.cpp
III_course/2025-12-26-semester-assessments/: CMakeLists.txt  README.md  main.cpp
III_course/2026-02-05-polymorphism/: CMakeLists.txt  README.md  main.cpp
III_course/2026-02-09-qt-network-sockets-chat/: CMakeLists.txt  README.md  run.sh
III_course/2026-02-15-creating-own-components/: CMakeLists.txt  Components.cpp  Components.h  RAEDME.md  components.ui  main.cpp
III_course/2026-02-18-polymorphism2/: CMakeLists.txt  README.md  main.cpp
III_course/2026-02-26-polymorphism3/: CMakeLists.txt  README.md  main.cpp
III_course/2026-03-09-tamplate-set/: README.md
III_course/2026-03-09-template-set/: CMakeLists.txt  README.md  Set.cpp  Set.h  Set.tpp  main.cpp
III_course/2026-03-20-singleton/: CMakeLists.txt  main.cpp
III_course/2026-03-22-chislo/: CMakeLists.txt  Chislo.cpp  Chislo.h  Matrix.cpp  Matrix.h  README.md  main.cpp
III_course/2026-03-22-finder/: CMakeLists.txt  Finder.h  Finder.tpp  README.md  main.cpp
III_course/2026-03-25-sparse/: CMakeLists.txt  README.md  SparseArray.h  SparseArray.tpp  SparseItem.h  SparseItem.tpp  main.cpp
III_course/2026-04-09-stream-io-function/: CMakeLists.txt  Function.h  Function.tpp  README.md  main.cpp
III_course/2026-04-11-try-catch/: CMakeLists.txt  README.md  main.cpp
III_course/2026-04-12-doubly-linked-list/: CMakeLists.txt  DoublyLinkedList.h  DoublyLinkedList.tpp  Person.h  README.md  main.cpp
III_course/2026-04-19-patterns/: CMakeLists.txt  Decorator.cpp  Decorator.h  Observer.cpp  Observer.h  Visitor.cpp  Visitor.h  main.cpp
III_course/2026-04-24-recursion/: CMakeLists.txt  README.md  main.cpp
III_course/2026-05-06-c_string/: CMakeLists.txt  README.md  main.cpp
III_course/2026-05-06-pointer/: README.md
III_course/2026-05-14-c_files/: README.md
II_course/: CMakeLists.txt  README.md
II_course/Practical_10/: README.md
II_course/Practical_12/: CMakeLists.txt
II_course/Practical_13/: main.cpp
II_course/Practical_14/: main.cpp
II_course/Practical_2_15/: main.cpp
II_course/Practical_2_16/: main.cpp
II_course/Practical_2_17/: main.cpp
II_course/Practical_2_19/: README.md  main.cpp
II_course/Practical_2_20/: bubble_sort.cpp  insert_sort.cpp  select_sort.cpp
II_course/Practical_2_21/: recursion_demo.cpp
II_course/Practical_2_22/: 02_class_complex.cpp  04_struct_person.cpp  main.cpp
II_course/Practical_2_23/: example.txt
II_course/Practical_2_24/: README.md  main.cpp  test.cpp
II_course/Practical_4/: CMakeLists.txt  main.cpp
II_course/Practical_5/: CMakeLists.txt  README.md  main.cpp
II_course/Practical_6/: README.md  main.cpp
II_course/Practical_7/: README.md  main.cpp
II_course/Practical_9/: main.cpp
math/III_course/: CMakeLists.txt  README.md
(+343 files in other folders)
