cmake_minimum_required(VERSION 3.29)
project(cpp)

set(CMAKE_CXX_STANDARD 23)

# Практична 2.23
add_executable(Practical_2_23
        II_course/Practical_2_23/file_io_examples.cpp
)

# Практична 2.24
add_executable(Practical_2_24
        II_course/Practical_2_24/main.cpp
        II_course/Practical_2_24/utils.cpp
)