# III_course/CMakeLists.txt
add_subdirectory(2025-09-04-sqrt)
add_subdirectory(2025-09-11-topic-3)
add_subdirectory(2025-09-17-arrays)
add_subdirectory(2025-09-17-linear-programming)
add_subdirectory(2025-09-24-qt-notepad)
add_subdirectory(2025-10-02-pointers-and-links)
add_subdirectory(2025-10-02-assertion-statement)
