# cpp_course/III_course/CMakeLists.txt

add_subdirectory(2025-09-04-sqrt)
add_subdirectory(2025-09-11-topic-3)
add_subdirectory(2025-09-17-arrays)
add_subdirectory(2025-09-17-linear-programming)
add_subdirectory(2025-09-24-qt-notepad)
add_subdirectory(2025-10-02-pointers-and-links)
add_subdirectory(2025-10-02-assertion-statement)
add_subdirectory(2025-10-04-loops)
add_subdirectory(2025-10-04-string-variables-and-functions)
add_subdirectory(2025-10-04-files)
add_subdirectory(2025-10-06-classes-and-objects)
add_subdirectory(2025-10-06-classes-and-objects-7)
add_subdirectory(2025-10-13-topic-8)
add_subdirectory(2025-10-19-square-perimeter)
add_subdirectory(2025-10-29-simpson-integration)
add_subdirectory(2025-11-01-qt-tabulation)
add_subdirectory(2025-11-03-qt-gui-basics)
add_subdirectory(2025-11-04-overloading-of-arguments)
add_subdirectory(2025-11-10-qt-practical-10-tree-parser)
add_subdirectory(2025-11-12-qt-drawing)
add_subdirectory(2025-11-15-qt-practical-11-tree-parser-2)
add_subdirectory(2025-11-18-topic-14)
add_subdirectory(2025-11-19-qt-practical-13-postgresql)