# III_course/2025-09-11-topic-3/CMakeLists.txt
project(2025-09-11-topic-3)

set(CMAKE_CXX_STANDARD 23)

add_executable(sorting_array_2025_09_11
        sorting_array.cpp
)

add_executable(vector_map_search_2025_09_11
        vector_map_search.cpp
)

add_executable(linkedlist_insert_2025_09_11
        linkedlist_insert.cpp
)
