# cpp_course/math/III_course/CMakeLists.txt

add_subdirectory(2026-03-07-shots)
add_subdirectory(2026-03-08-probability-combination)
add_subdirectory(2026-03-13-bernoulli)
add_subdirectory(2026-03-13-laplace-poisson)
add_subdirectory(2026-03-15-expected-variance)
add_subdirectory(2026-03-18-random-variables)
add_subdirectory(2026-03-19-continuous-random-variable)
add_subdirectory(2026-03-21-density)
add_subdirectory(2026-03-21-empirical-distribution-function)
add_subdirectory(2026-03-26-anova)
add_subdirectory(2026-03-29-confidence_interval)
add_subdirectory(2026-04-07-descriptive-statistics)